<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kalkulator"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/num1"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:hint="@string/masukkan_angka_pertama"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/num2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:hint="@string/masukkan_angka_kedua"
        android:inputType="number"
        android:minHeight="48dp"/>

    <TextView
        android:id="@+id/result"
        android:text="@string/hasil"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/btn_tambah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textSize="25sp"
            android:layout_marginTop="15sp"/>

    <Button
            android:id="@+id/btn_kurang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sub"
            android:textSize="25sp"
            android:layout_marginTop="5sp"/>

    <Button
            android:id="@+id/btn_kali"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mul"
            android:textSize="25sp"
            android:layout_marginTop="5sp"/>

    <Button
            android:id="@+id/btn_bagi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/div"
            android:textSize="25sp"
            android:layout_marginTop="5sp"/>

</LinearLayout>